--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,22 +1,22 @@
-primary_name: "Your Name"
+primary_name: "Fengyu Yang"
 secondary_name: ""
-navbar_name: "Your Name"
+navbar_name: ""
 
 positions:
-- name: Title or Position
-- name: Affiliation Name
-  logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
+- name: Ph.D. candidate 
+- name: University of North Carolina at Chapel Hill
+  # logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
 
 
-email: "your@email.com"
+email: "fengyu.yang19@email.com"
 # cv_link: link-to-your-cv-file
-gscholar: xFmQpf4AAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: your_github_id
-twitter: your_twitter_id  # Do not include the '@' symbol
+gscholar: https://scholar.google.com/citations?view_op=list_works&hl=zh-CN&user=7tEWSZUAAAAJ  # This is an example, replace it with your own Google Scholar ID
+github: 563925743
+# twitter: your_twitter_id  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
-# linkedin: your-linked-in-id
+linkedin: https://www.linkedin.com/in/yang-fengyu/
 # orcid: 0000-0000-0000-0000
 
 short_bio_text_justify: false
