--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -28,17 +28,17 @@ portrait_caption: >-
 
 education:
 - name: University of North Carolina, Chapel Hill
-  logo: /assets/images/badges/MIT_Social_circle.png
+  # logo: /assets/images/badges/MIT_Social_circle.png
   position: >- 
     Ph.D. in Applied Mathematics, Minor in Statistics & Operations Research
   date: Aug. 2021 - present
 - name: University of Chicago
-  logo: /assets/images/badges/PKU_red.png
+  # logo: /assets/images/badges/PKU_red.png
   position: M.S. in Computational and Applied Mathematics
   date: Sep. 2019 - Mar. 2021
 
 - name: Shandong University
-  logo: /assets/images/badges/PKU_red.png
+  # logo: /assets/images/badges/PKU_red.png
   position: B.S. in Statistics of Mathematics School
   date: Sep. 2015 - Jun. 2019
 
