--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -8,7 +8,7 @@ positions:
   # logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
 
 
-email: "fengyu.yang19@email.com"
+email: "fengyu.yang19@gmail.com"
 # cv_link: link-to-your-cv-file
 gscholar: https://scholar.google.com/citations?view_op=list_works&hl=zh-CN&user=7tEWSZUAAAAJ  # This is an example, replace it with your own Google Scholar ID
 github: 563925743
