--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -21,32 +21,41 @@ linkedin: https://www.linkedin.com/in/yang-fengyu/
 
 short_bio_text_justify: false
 short_bio: >-
-  I am currently a Ph.D. candidate at University of North Carolina at Chapel Hill, advised by Prof. Shahar Kovalsky. My research focuses on *Differentiable Optimization, Machine Learning, and Statistical Modeling*. I am currently a Research Scientist intern at ByteDance Seed-AI for Science team, working on AI-driven protein structure reconstruction. 
-portrait_url: /assets/images/photos/portrait.jpg
+  I am currently a Ph.D. candidate at University of North Carolina at Chapel Hill, advised by Prof. Shahar Kovalsky. My research focuses on <em>Differentiable Optimization, Machine Learning, and Statistical Modeling</em>. I am currently a Research Scientist intern at ByteDance Seed-AI for Science team, working on AI-driven protein structure reconstruction. 
+portrait_url: /assets/images/photos/my.jpg
 portrait_caption: >-
   Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
 education:
 - name: University of North Carolina, Chapel Hill
-  # logo: /assets/images/badges/MIT_Social_circle.png
+  logo: /assets/images/badges/unc.png
   position: >- 
     Ph.D. in Applied Mathematics, Minor in Statistics & Operations Research
   date: Aug. 2021 - present
 - name: University of Chicago
-  # logo: /assets/images/badges/PKU_red.png
+  logo: /assets/images/badges/uchicago.png
   position: M.S. in Computational and Applied Mathematics
   date: Sep. 2019 - Mar. 2021
 
 - name: Shandong University
-  # logo: /assets/images/badges/PKU_red.png
+  # logo: /assets/images/badges/sdu.png
   position: B.S. in Statistics of Mathematics School
   date: Sep. 2015 - Jun. 2019
 
 experience:
-- name: Peking University
-  logo: /assets/images/badges/PKU_red.png
-  position: Research Intern
-  date: Sep. 2019 - Jul. 2019
+- name: ByteDance
+  logo: /assets/images/badges/ByteDance.png
+  position: Seed-AI for Science, Research Scientist Intern
+  date: May 2025 -- Present
+- name: Argonne National Laboratory
+  logo: /assets/images/badges/argn.png
+  position: Givens Associate
+  date: May 2023 - Aug. 2023
+- name: Deloitte Consulting (Shanghai)
+logo: /assets/images/badges/deloitte.png
+position: Data Visualization & Analyst Intern
+date: Aug. 2018 - Feb. 2019
+  
 
 # awards:
 # - name: Award Name 2
