--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -38,7 +38,7 @@ education:
   date: Sep. 2019 - Mar. 2021
 
 - name: Shandong University
-  # logo: /assets/images/badges/sdu.png
+  # logo: /assets/images/badges/sdu.jpg
   position: B.S. in Statistics of Mathematics School
   date: Sep. 2015 - Jun. 2019
 
