--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -54,7 +54,7 @@ experience:
   date: May 2023 - Aug. 2023
   
 - name: Deloitte Consulting (Shanghai)
-  logo: /assets/images/badges/deloitte.png
+  logo: /assets/images/badges/deloitte.jpeg
   position: Data Visualization & Analyst Intern
   date: Aug. 2018 - Feb. 2019
   
