--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -16,7 +16,7 @@ github: 563925743
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
-linkedin: https://www.linkedin.com/in/yang-fengyu/
+linkedin: yang-fengyu
 # orcid: 0000-0000-0000-0000
 
 short_bio_text_justify: false
