--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ pages:
 #   url: /
 - name: Home
   url: /index_layout2
-- name: Research
-  url: /publications
+# - name: Research
+#   url: /publications
 # - name: Showcase
 #   url: /showcase
